# affinetes

./: pyproject.toml
affinetes/backends/: local.py  remote.py
affinetes/core/: wrapper.py
environments/SWE-bench_Pro-os/: Dockerfile  env.py  requirements.txt  swebench_config.yaml
environments/agentgym/: Dockerfile
environments/game/number_guess/: env.py
environments/openspiel/: env.py  llm_bot.py
environments/openspiel/agents/: backgammon.py  gin_rummy.py  hex.py  leduc_poker_agent.py  liars_dice_agent.py  othello.py
environments/primeintellect/cde/: code_task.py  env.py  requirements.txt
environments/primeintellect/deepdive/: deepdive_task.py  env.py
environments/primeintellect/deepswe/: env.py
examples/: build_and_push_image.py  evaluate_affine.py
examples/basilica-sdk/: README.md  basilica_env_server.py  basilica_evaluator.py  basilica_llm_server.py  cleanup.py
examples/primeintellect/: evaluate_deepdive.py
examples/targon-sdk/: README.md  requirements.txt  validator.py
