[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affinetes"
version = "0.1.0"
description = "Container-based Environment Management System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Affinetes Team", email = "contact@affinetes.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "docker>=7.1.0",
    "aiohttp>=3.8.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0",
    "nest-asyncio>=1.5.0",
    "httpx>=0.24.0",
    "paramiko>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
afs = "affinetes.cli:main"

[project.urls]
Homepage = "https://github.com/affinetes/affinetes"
Repository = "https://github.com/affinetes/affinetes"

[tool.setuptools.packages.find]
include = ["affinetes*"]

[tool.setuptools.package-data]
affinetes = ["templates/*"]
